--- a/www/lib/ionic/scss/_variables.scss
+++ b/www/lib/ionic/scss/_variables.scss
@@ -36,7 +36,7 @@ $headings-font-family:            $font-family-base !default;
 $headings-font-weight:            500 !default;
 $headings-line-height:            1.2 !default;
 
-$base-background-color:           #ffefcd !default;
+$base-background-color:           #ffffff !default;
 $base-color:                      #04041B !default;
 
 $link-color:                      $positive !default;
