--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -1,4 +1,5 @@
 <ion-view class="login">
+    <ion-header-bar class="login-preheader" scroll="false"></ion-header-bar>
     <ion-header-bar class="login-header" scroll="false">
         <div class="row header-tabs" scroll="false">
             <div class="left" ng-class="{'active': view.show  === 'sign_in'}">
