--- a/www/templates/menu/left.html
+++ b/www/templates/menu/left.html
@@ -17,35 +17,35 @@
         </div>
 
         <button class="button button-clear category" menu-close ui-sref="menu.artist-list">
-            <img src="img/menu/category/AS16_APPiconos_05.png">
+            <img src="img/menu/category/artist.png">
             <a>ARTISTAS</a>
         </button>
         <button class="button button-clear category" menu-close ui-sref="menu.poster">
-            <img src="img/menu/category/AS16_APPiconos_11.png">
+            <img src="img/menu/category/poster.png">
             <a>CARTEL</a>
         </button>
         <button class="button button-clear category" menu-close ui-sref="menu.schedule">
-            <img src="img/menu/category/AS16_APPiconos_17.png">
+            <img src="img/menu/category/schedule.png">
             <a>HORARIOS</a>
         </button>
         <button class="button button-clear category" menu-close ui-sref="menu.map">
-            <img src="img/menu/category/AS16_APPiconos_23.png">
+            <img src="img/menu/category/map.png">
             <a>MAPA</a>
         </button>
         <button class="button button-clear category" menu-close ui-sref="menu.ticket" >
-            <img src="img/menu/category/AS16_APPiconos_29.png">
+            <img src="img/menu/category/ticket.png">
             <a>ENTRADAS</a>
         </button>
-        <!--<button class="button button-clear category" menu-close ui-sref="menu.foodies">-->
-            <!--<img src="img/menu/category/transparent.gif">-->
-            <!--<a>FOODIES</a>-->
-        <!--</button>-->
+        <button class="button button-clear category" menu-close ui-sref="menu.foodies">
+            <img src="img/menu/category/streaming.png">
+            <a>STREAMING</a>
+        </button>
         <button class="button button-clear category" menu-close ui-sref="menu.info">
-            <img src="img/menu/category/AS16_APPiconos_41.png">
+            <img src="img/menu/category/info.png">
             <a>INFO</a>
         </button>
         <button class="button button-clear category" menu-close ui-sref="menu.social">
-            <img src="img/menu/category/AS16_APPiconos_47.png">
+            <img src="img/menu/category/social.png">
             <a>SOCIAL</a>
         </button>
         <button class="button button-clear category" menu-close ui-sref="menu.coolway">
