--- a/www/templates/user/recover_password.html
+++ b/www/templates/user/recover_password.html
@@ -7,7 +7,7 @@
                 </div>
                 <input ng-model="view.user.email" type="email" placeholder="Correo electrónico" name="email" required>
             </div>
-            <button class="button button-light" style="width: 100%; margin-top:20px" ng-click="recoverPassword()">Recuperar contraseña</button>
+            <button class="button button-light" style="width: 100%; margin-top:20px; color: #ffffff; background-color: #000000" ng-click="recoverPassword()">Recuperar contraseña</button>
         </div>
 
     </div>
