--- a/www/templates/user/sign_in.html
+++ b/www/templates/user/sign_in.html
@@ -2,7 +2,7 @@
     <div ng-show="view.show_login === 'options'">
         <div class="title">
             <h4>Reg&iacute;strate ahora</h4>
-            <span>Te llevar&aacute; &uacute;nicamente unos minutos</span>
+            <span>Te llevar&aacute; &uacute;nicamente unos segundos</span>
         </div>
         <div class="options">
             <img src="img/login/facebook.png" ng-click="loginFacebook()">
@@ -31,8 +31,9 @@
             </div>
         </div>
         <div class="login-footer">
+            <a ng-click="openLink('http://www.arenalsound.com/wp-content/uploads/2017/03/CONDICIONES_GENERALES_Y_DERECHOSDEADMISION.pdf')">T&eacute;rminos y condiciones</a>
+            <a ng-click="openLink('http://www.arenalsound.com/wp-content/uploads/2017/03/AVISOLEGAL_ARENALSOUND.pdf')">Pol&iacute;tica de privacidad</a>
             <img src="img/login/sign-in.png" ng-click="login()">
-            <a ng-click="openLink('http://www.festivaldelesarts.com/wp-content/uploads/2015/10/Condiciones_Generales_Arts_2016.pdf')">T&eacute;rminos y condiciones</a>
         </div>
     </div>
 
