--- a/www/templates/artist/detail.html
+++ b/www/templates/artist/detail.html
@@ -11,11 +11,10 @@
             </div>
         </div>
         <div class="row body">
-            <div class="col col-100">
                 <p class="date" ng-if="view.scheduleActive" >{{view.artist.schedule | parseDate: 'dddd, D MMMM'}}</p>
                 <p class="time" ng-if="view.scheduleActive" ><i class="ion-clock"> </i>&nbsp;{{view.artist.schedule | parseDate: 'HH:mm'}}</p>
                 <p class="stage-name" ng-if="view.scheduleActive" ><i class="ion-location">&nbsp;{{view.artist.stage_name}}</i></p>
-                <hr style="border-top: 1px solid #504F4E;">
+                <hr class="item-divider-artist">
                 <p class="description">
                     {{view.artist.description}}
                 </p>
@@ -23,7 +22,7 @@
                     <img src="img/coolway/social-network/spotify.png">
                     <p>Escucha r&aacute;pida </p>
                 </button>
-                <hr class="artist-detail-divider">
+                <hr class="item-divider-artist">
                 <p class="social-title">SOCIAL</p>
                 <div class="social">
                     <img src="img/coolway/social-network/facebook.png" ng-if="view.artist.facebook.length" ng-click="openLink('{{view.artist.facebook}}')">
@@ -32,7 +31,6 @@
                     <img src="img/coolway/social-network/youtube.png" ng-if="view.artist.youtube.length">
                     <img src="img/coolway/social-network/share.png" ng-click="shareAnywhere(view.artist)">
                 </div>
-            </div>
         </div>
     </ion-content>
 </ion-view>
