--- a/www/templates/info/weather.html
+++ b/www/templates/info/weather.html
@@ -1,6 +1,6 @@
 <ion-view>
-    <ion-content overflow-scroll="true" class="weather" ng-init="getWeather()">
-        <div class="row filters">
+    <ion-content overflow-scroll="true" class="weather" ng-init="getWeather()" style="background: #000000!important;">
+        <div class="row filters" style="background: #FB8F89 !important;">
             <div class="col col-100">
                 <h3>TIEMPO</h3>
             </div>
