--- a/www/templates/info/main.html
+++ b/www/templates/info/main.html
@@ -1,6 +1,6 @@
 <ion-view>
-    <ion-content class="info">
-        <div class="row filters" scroll="false">
+    <ion-content class="info" style="background: #000000!important;">
+        <div class="row filters" scroll="false" style="background: #FB8F89 !important;">
             <h3>Informaci&oacute;n Basica</h3>
         </div>
         <ion-list>
@@ -19,7 +19,7 @@
             <ion-item ng-click="openLink('http://www.arenalsound.com/')">
                 4. Web
             </ion-item>
-            <ion-item ng-click="openLink('http://www.arenalsound.com/wp-content/uploads/2015/11/AVISO-LEGAL-ARENAL-SOUND.pdf')">
+            <ion-item ng-click="openLink('http://www.arenalsound.com/wp-content/uploads/2017/03/AVISOLEGAL_ARENALSOUND.pdf')">
                 5. Aviso legal
             </ion-item>
         </ion-list>
