--- a/www/templates/menu/left.html
+++ b/www/templates/menu/left.html
@@ -49,7 +49,7 @@
         <!--</button>-->
 
         <div class="footer-left-menu">
-            <img src="img/menu/the_night_time.png">
+            <!--<img src="img/menu/the_night_time.png">-->
         </div>
     </ion-content>
 </ion-view>
