--- a/www/templates/schedule/by-time.html
+++ b/www/templates/schedule/by-time.html
@@ -2,7 +2,7 @@
     <ion-list class="list">
         <ion-item ng-repeat="item in view.artists | orderBy:'schedule'" ng-show="validateDate(item.schedule)">
             <div class="left" ng-click="showDetail({{item.id}})">
-                <img src="img/artist/icon.png" ng-src="{{view.server_image}}artists/{{item.id}}/100/{{item.image_profile}}"  class="artist-cover">
+                <img src="img/artist/icon.png" err-SRC="img/artist/icon.png" ng-src="{{view.server_image}}artists/{{item.id}}/100/{{item.image_profile}}"  class="artist-cover">
             </div>
             <div class="center" ng-click="showDetail({{item.id}})">
                 <p class="artist-name">{{item.name|cleanName}}</p>
